# advent-of-code

./: .gitignore  README.md  pyproject.toml  start
03/: day03.py
04/: day04.py
05/: day05.py  day05_test.py
06/: day06.py  day06_test.py
07/: day07.py  day07_test.py
08/: day08.py
09/: day09.py  day09_test.py
10/: day10.py  day10_test.py
11/: day11.py  day11_test.py
12/: day12.py  day12_test.py
13/: day13.py  day13_test.py
14/: day14.py  day14_test.py
15/: day15.py  day15_test.py
16/: day16.py  day16_test.py
17/: day17.py  day17_test.py
18/: day18.py  day18_test.py
19/: day19_test.py
src/advent_of_code/: console.py
src/advent_of_code/2021/01/: day01.py
src/advent_of_code/2021/02/: day02.py
src/advent_of_code/2021/03/: day03.py
src/advent_of_code/2021/05/: day05_test.py
src/advent_of_code/2021/07/: day07.py
src/advent_of_code/2021/08/: day08_test.py
src/advent_of_code/2021/10/: day10.py
src/advent_of_code/2021/14/: day14.py
src/advent_of_code/2021/16/: day16.py
src/advent_of_code/2021/17/: day17.py  day17_test.py
src/advent_of_code/2021/18/: day18.py
src/advent_of_code/2021/19/: day19.py
src/advent_of_code/2021/20/: day20.py  day20_test.py
src/advent_of_code/2021/21/: day21.py  day21_test.py
src/advent_of_code/2022/01/: day01.py
src/advent_of_code/2022/02/: day02.py
src/advent_of_code/2022/03/: day03.py  test_day03.py
src/advent_of_code/2022/04/: day04.py
src/advent_of_code/2022/05/: day05.py
src/advent_of_code/2022/06/: day06.py
src/advent_of_code/template/: day00.py  test_day00.py
(+43 files in other folders)
