[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "My solutions to Advent of Code."
authors = ["Kilian Unterguggenberger <kilian@unterguggenberger.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
