[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "My solutions to Advent of Code."
authors = ["Kilian Unterguggenberger <kilian@unterguggenberger.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
click = "^8.1.3"
requests = "^2.28.1"
pyyaml = "^6.0"
matplotlib = "^3.6.2"
tqdm = "^4.66.1"

[tool.poetry.scripts]
aoc = "advent_of_code.console:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
